10.12.2010:
        - More compiler and build warnings fixes. (Orcan)
        - Restored the scripts menu and fixed scripts handling. Tested OK. (Orcan)
        - Added left, right, up, down to shortcuts dialog. Test OK. (Tim)
        - Fixed ctrl canvas not lining up in drumedit and pianoroll. (Orcan)
09.12.2010:
        - Fix: column orders mess up in the main window, and they do not save properly in
          the .med files. (Orcan)
        - Made MusE the owner of transport object so it's now deleted when MusE object is deleted. (Tim)
        - Improved PosEdit class, supports undo/redo levels, focus-out + return pressed updating. (Tim)
          This also fixes the Transport position boxes' sections jumping to last section. 
          TODO: There's still trouble editing with KB in Bar-Beat-Tick mode, the bar and beat being '1' based.
          TODO: Fix SigEdit (the time Signature Editor boxes).
        - Fix some build and compiler warnings. (Orcan)
        - Fix the max slider value in the transport. This was a typo I made during conversion. (Orcan)
08.12.2010:
        - Ported many more Qt3 methods to Qt4. (Orcan)
        - Turned off Qt3Support. Muse2 is now a pure Qt4 application. (Orcan)
07.12.2010:
        - Ported rack. TODO: Drag and drop needs a hand. It's not working. (Orcan)
        - Converted various Qt3 support methods to Qt4 in many files. (Orcan)
        - Includes cleanup in app.*. (Orcan)
        - Converted all instances of latin1() and crossed my fingers. Initial tests OK. (Orcan)
06.12.2010
        - Built Awl::posedit and Awl::sigedit, and replaced /widget versions and all usages. (Tim)
          TODO: Awl::sigedit has no returnPressed signal, for lmaster. 
          TODO: Transport position posedits jump to sub-ticks sections - can't auto-inc other sections.
        - Reverted class SpinBox to previous revision. Test OK. (Tim)
05.12.2010
        - Completed porting of dlist module (the drum list). Test OK. (Tim)